src/styles.css
/* ... */
#content-layout > .ant-layout-content {
  padding: var(--content-padding-v) var(--content-padding-h);
}

.margin-auto {
  margin: auto;
}

.container {
  width: 100%;
  max-width: var(--content-max-width);
}

/* END layout HTML styling */

#dashboard-tabs {
  margin: 0 12px;
}

#dashboard-tabs.ant-tabs-card > .ant-tabs-nav .ant-tabs-tab {
  /* by default, antd card-style tab borders are too subtle. make them "pop" a bit more :-) */
}
#dashboard-tabs.ant-tabs-card > .ant-tabs-nav .ant-tabs-tab:not(.ant-tabs-tab-active) {
  /* by default, antd card-style unselected tabs are too subtle. make them "pop" a bit more :-) */
  border: 1px solid #e9e9e9;
  background: rgba(0, 0, 0, 0.03);
}


/* BEGIN about HTML styling */

/* Elements which are the first child of the about content container shouldn't have the default top margin */
.about-content *:first-child {
  margin-top: 0;
}
/* Elements which are the last child of the about content container shouldn't have the default bottom margin */
.about-content *:last-child {
  margin-bottom: 0;
}

/* Images should scale proportionally with container width */
.about-content img {
  max-width: 100%;
  height: auto;
}

/* END about HTML styling */


/* BEGIN overview */

.count-card {
  min-width: 150px;
  transition:
    height 0.3s ease-in-out,
    margin-bottom 0.3s ease-in-out,
    box-shadow 0.15s ease-in-out,
    opacity 0.15s ease-in-out;
}
.count-card .ant-statistic .ant-statistic-content {
  white-space: nowrap;
}
.count-card.shadow {
  border-color: #e9e9e9; /* a bit darker to contrast against box-shadow */
}
.count-card.shadow.count-card-clickable {
  cursor: pointer;
  opacity: 0.9;
}
.count-card.shadow.count-card-clickable:hover {
  box-shadow: 0 3px 15px rgba(0, 0, 0, 0.1);
  opacity: 1;
}
.count-card.shadow.count-card-clickable .counts-title {
  text-decoration: underline;
  transition: color 0.15s ease-in-out;
}
.count-card.shadow.count-card-clickable:hover .counts-title,
.count-card.shadow.count-card-clickable:hover .count-card__show-hide {
  color: #1677ff;
}
.count-card.shadow.count-card-selected {
  border-bottom: none;
  z-index: 3;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  margin-bottom: -12px;
}

.counts-title__text {
  white-space: nowrap;
}

.count-card__show-hide {
  position: absolute;
  left: 0;
  z-index: 4;

  height: 32px;
  width: 100%;

  text-align: center;
  font-size: 12px;

  transition: bottom 0.3s ease-in-out;
}
.count-card__show-hide:hover {
  color: #1677ff;
}

.dataset-provenance-card-grid {
  --dataset-grid-gap: 20px;

  display: grid;
  /* 690 * 2 + 20 (gap) = 1400 */
  grid-template-columns: repeat(auto-fit, minmax(250px, calc((var(--content-max-width) - var(--dataset-grid-gap)) / 2)));
  gap: var(--dataset-grid-gap);
}

.slick-arrow {
  color: black !important; /* override slick-next/slick-prev color */
}

.slick-dots li button {
  background-color: black !important; /* override slick-dots color */
}

.overview {
  transition: opacity 0.2s ease-in-out;
}
.overview.loading {
  opacity: 0.2;
}

/* END overview */


/* BEGIN search */

.search-sub-form {
  flex: 1;
}

h3.search-sub-form-title {
  font-size: 1.1rem;
  margin-top: 0;
}

.search-results-pane {
  display: flex;
  justify-content: center;
  width: 100%;
}

.search-result-statistic.enabled {
  padding: 8px 16px;
  margin-left: -16px;
  border-radius: 8px; /* Consistent with --ant-border-radius-lg */

  cursor: pointer;
  border: 1px solid #d9d9d9;
  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.02);
  transition: all 0.2s cubic-bezier(0.645, 0.045, 0.355, 1); /* from antd */
}

.search-result-statistic.enabled:hover {
  border-color: #4096ff;
}

.search-result-statistic.selected {
  background-color: #fafafa;
}

.search-result-statistic.enabled.selected {
  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.02), inset 0 2px 5px rgba(0, 0, 0, 0.08);
}

/* END search */

/* BEGIN phenopackets/other clinical+phenotypic metadata views */

.fixed-item-label-width .ant-descriptions-item-label {
  /* Align split line vertically in all descriptions */
  width: min(30vw, 250px);
}
.fixed-item-label-width-narrow .ant-descriptions-item-label {
  /* Align split line vertically in all descriptions */
  width: min(15vw, 125px);
}

tr.ant-table-expanded-row .ant-descriptions-item-content .ant-descriptions > .ant-descriptions-view > table {
  width: auto;
}

/*  - compact descriptions and table */

.ant-descriptions.compact .ant-descriptions-row > td {
  padding-bottom: 2px;
}

.ant-descriptions.compact .ant-descriptions-item-content,
.ant-descriptions.compact .ant-descriptions-item-label {
  padding: 2px 12px !important;
}
.ant-descriptions-item-content .ant-descriptions.compact:not(.ant-descriptions-bordered) .ant-descriptions-item-label {
  /* nested non-bordered description items - kill horizontal padding */
  padding: 2px 0 !important;
}

.ant-descriptions:not(.ant-descriptions-bordered) .ant-descriptions-item-label {
  /* The default for non-bordered description labels is too light - darken it a bit for readability */
  color: rgba(0, 0, 0, 0.65) !important;
}

.ant-descriptions.compact > .ant-descriptions-header {
  margin-bottom: 4px;
}
.ant-descriptions.compact > .ant-descriptions-header > .ant-descriptions-title {
  font-size: 14px;
}

.ant-collapse.compact .ant-collapse-header {
  padding: 4px 0 !important;
}
.ant-collapse.compact .ant-collapse-content-box {
  padding: 8px 0 16px 0 !important;
}

.compact .ant-table-cell {
  padding: 2px 8px !important;
}
.compact .ant-table-expanded-row > .ant-table-cell {
  padding: 8px !important;
}

.ant-table-wrapper .ant-table-cell * .ant-table-container:first-child {
  /* undo border 0 set by ant design styling for tables nested directly in a cell if we have anything in between.
     border colour should be synced to global border colour. */
  border-top: 1px solid rgba(0, 0, 0, 0.08);
}
/* ... */

